Fix wagger files
